# cm.klg.service-provider/specs/openapi/inbound/main.yml
@@ -206,6 +206,31 @@ paths:
           description: "Successful operation"
         "404":
           description: "SERVICE_PROVIDER_404_002"
+  /service-provider/{serviceProviderId}/profile:
+    get:
+      tags:
+      - "ServiceProvider"
+      summary: "Get Service Provider Profile"
+      description: "Get Service Provider Profile"
+      operationId: "getServiceProviderProfile"
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: "serviceProviderId"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+          format: "uuid"
+      responses:
+        "200":
+          description: "Successful operation"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ServiceProvider"
+        "404":
+          description: "SERVICE_PROVIDER_404_002"
   /service-catalog:
     get:
       tags:
@@ -265,6 +290,7 @@ components:
       required:
       - "id"
       - "userId"
+      - "lastname"
       - "city"
       - "district"
       - "quarter"
@@ -279,6 +305,10 @@ components:
         userId:
           type: "string"
           format: "uuid"
+        firstname:
+          type: "string"
+        lastname:
+          type: "string"
         city:
           type: "string"
           format: "uuid"
@@ -305,13 +335,18 @@ components:
     UserService:
       type: "object"
       required:
-      - "serviceProviderId"
-      - "serviceTypeId"
+      - "serviceName"
+      - "serviceCategory"
+      - "yearOfExperience"
+      - "document"
       - "createdAt"
       properties:
-        serviceProviderId:
+        serviceName:
           type: "string"
-          format: "uuid"
+        serviceCategory:
+          type: "string"
+        yearOfExperience:
+          type: "integer"
         document:
           type: "string"
           format: "uuid"
